# hextom-send-stock-price

./: .gitignore  docker-compose.yml  fly.toml
backend/: crontab  db.sqlite3  dockerfile  fly.toml  manage.py  pyproject.toml
backend/send_stock_price/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/stocks/: settings.py  urls.py
backend/subscriptions/: constants.py  models.py  serializers.py  tasks.py  views.py
backend/subscriptions/bonus_feature/: views.py
backend/subscriptions/emails/: chatgpt.py  email_views.py  send_subscription_emails.py
backend/subscriptions/management/commands/: send_subscription_stock_emails_scheduled.py
backend/subscriptions/migrations/: 0001_initial.py
backend/subscriptions/tasks/: send_subscription_emails.py
backend/subscriptions/templates/: index.html
backend/subscriptions/templates/emails/: stock_update.html
backend/subscriptions/tests/: test_get_and_delete_views.py  test_get_news_bonus_feature_views.py  test_get_views.py  test_post_views.py  test_put_views.py  test_sanity.py  test_send_individual_stock_email.py  test_send_stock_email.py  test_signup.py  test_views.py
backend/subscriptions/users/: views.py
backend/subscriptions/utilities/: debug_middleware.py  get_stock_price.py
docs/: index.html
docs/assets/: index-CY1SxnGN.css  index-HlCk4GAE.js
frontend/: .dockerignore  .env.production  dockerfile  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: setup.js
frontend/e2e/tests/: login.spec.js
frontend/src/: App.jsx
frontend/src/components/: Card.jsx  (+9 more)
(+9 files in other folders)
