[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "blaicheo",email = "78671393+blacheo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "django-rest-knox (>=5.0.2,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "celery (>=5.5.3,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "openai (>=1.106.0,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "django-crontab (>=0.7.1,<0.8.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false